--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <form action="" class="formulario">
             <input type="text" name="" id="" placeholder="Nombre">
             <input type="email" name="" id="" placeholder="Email">
-            <textarea name="" id="" cols="30" rows="10" placeholder="¿Tienes comentarios o dudas?, ponlo aqui, al igual si quieres realizar alguna petición"></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="¿Tienes comentarios o dudas?, ponlo aqui, al igual si quieres realizar alguna petición :)"></textarea>
             <input type="submit" value="Enviar">
         </form>
         <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-26.52,-25.14 C149.99,150.00 271.49,-49.98 502.82,45.89 L500.00,0.00 L10.72,-26.13 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg></div>>
